--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
             <version>2.14.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.3</version>
+        </dependency>
+
 
     </dependencies>
 
